# bootc

./: .dockerignore  .packit.yaml  ADOPTERS.md  CODE_OF_CONDUCT.md  Cargo.toml  Containerfile  Dockerfile  Dockerfile.cfsuki  Dockerfile.sdboot  Justfile  LICENSE  Makefile  README.md  build_seed.sh  deny.toml
.github/workflows/: auto-review.yml  autovendor.yml  build-and-publish.yml  ci.yml  crates-release.yml  docs.yml  e2e.yml  integration.yml  labeler.yml  release.yml  scheduled-release.yml  udpate-generated.yml
blockdev/: Cargo.toml
ci/: Containerfile.install-unified-storage
cli/: Cargo.toml
cli/src/: main.rs
contrib/packaging/: Dockerfile.ostree-override  bootc.spec  configure-rootfs  enable-compose-repos  finalize-uki  inject-baseconfig  seal-uki  (+3 more)
crates/tests-integration/: Cargo.toml
crates/tests-integration/src/: container.rs  install.rs  system_reinstall.rs  tests-integration.rs  varlink.rs
docs/: Dockerfile.mdbook
examples/: .gitignore  config.bu  libvirt.sh  simple.bu  to-disk.sh  to-filesystem-fcos.sh  to-filesystem-uki-cocl.sh  to-filesystem-uki-fcos.sh  to-filesystem-uki.sh  to-filesystem.sh
hack/: Containerfile  Containerfile.flat-test  Containerfile.packit  downgrade-kernel.sh  packages.txt  provision-derived.sh  provision-fetch.sh  provision-packit.sh  system-reinstall-bootc.exp
lib/: Cargo.toml
mount/: Cargo.toml
ostree-ext/: Cargo.toml
system-reinstall-bootc/: Cargo.toml
systemd/: bootc-soft-reboot.service
tests/: build-sealed  build.sh  test.sh
tests-integration/: Cargo.toml
utils/: Cargo.toml
xtask/: Cargo.toml
(+301 files in other folders)
