# Our integration tests
[package]
name = "tests-integration"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"
publish = false

[[bin]]
name = "tests-integration"
path = "src/tests-integration.rs"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
camino = { workspace = true }
cap-std-ext = { workspace = true }
clap = { workspace = true, features = ["derive","cargo"] }
fn-error-context = { workspace = true }
indoc = { workspace = true }
rustix = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
xshell = { workspace = true }
linux-kernel-cmdline = { workspace = true }

# Crate-specific dependencies
# bcvk-qemu: QEMU/virtiofsd management from the bcvk project.
# This is a git dependency — not published to crates.io.
# When updating, also check the bcvk-qemu Cargo.toml for its own
# dependency versions (cap-std-ext, etc.) to avoid conflicts.
bcvk-qemu = { git = "https://github.com/bootc-dev/bcvk", rev = "bdf106c74c13a0a1a4b39f9ad0f52b238fe2d318" }
data-encoding = "2.9"
indicatif = { workspace = true }
libtest-mimic = "0.8.0"
oci-spec = "0.10.0"
rand = "0.10"
rexpect = "0.7"
scopeguard = "1.2.0"
tar = "0.4"
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
